--- a/style.css
+++ b/style.css
@@ -231,6 +231,34 @@ section.viajar div.viajar-container div.viajar-img img {
   max-width: 100%;
 }
 
+section.servicos {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  margin-bottom: 60px;
+}
+
+section.servicos h2 {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  max-width: 850px;
+  font-size: max(22px, 2.8vw);
+  text-align: center;
+  color: #d97a43;
+}
+
+section.servicos div.servicos-container {
+  width: 90%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width: 600px) {
   header {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2)),
